"Update 'Get Started' button link from 'contact.html' to 'pages-login.html'"

--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
                     <p class="w3banr-p">Experience personalized banking solutions tailored to your needs.</p>
                     <div class="w3l-buttons mt-sm-5 mt-4">
                         <a class="btn btn-primary btn-style me-2" href="about.html">Discover More</a>
-                        <a class="btn btn-outline-primary btn-style" href="contact.html">Get Started</a>
+                        <a class="btn btn-outline-primary btn-style" href="pages-login.html">Get Started</a>
                     </div>
                 </div>
                 <div class="col-lg-6 w3l-slider-right-info mt-lg-0 mt-5 ps-lg-5 align-items-center">
