"Updated dashboard.html and pages-transfer.html with new table rows and form field changes"

--- a/public/pages-transfer.html
+++ b/public/pages-transfer.html
@@ -249,19 +249,12 @@
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <div class="form-floating mb-3">
-                    <select class="form-select" id="floatingSelect" aria-label="State">
-                      <option selected class="fw-light">New York</option>
-                      <option value="1" class="fw-light">Oregon</option>
-                      <option value="2" class="fw-light">DC</option>
-                    </select>
-                    <label for="floatingSelect" class="fw-light">State</label>
-                  </div>
+                 
                 </div>
                 <div class="col-md-2">
                   <div class="form-floating">
-                    <input type="text" class="form-control" id="floatingZip" placeholder="Zip">
-                    <label for="floatingZip" class="fw-light">Zip</label>
+                    <input type="text" class="form-control" id="floatingZip" placeholder="Amount">
+                    <label for="floatingZip" class="fw-light">Amount</label>
                   </div>
                 </div>
                 <div class="text-center">
