--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -336,9 +336,24 @@
                         <td>23-03-2024</td>
                         <td class="text-secondary-emphasis fw-bold">Savings</td>
                         <td>Gass Refill and PetrolFuel</td>
+                        <td>Transport</td>
+                        <td>$6,004</td>
+                        <td><span class="badge bg-success">Pending</span></td>
+                      </tr>
+                      <tr>
+                        <td>23-03-2022</td>
+                        <td class="text-secondary-emphasis fw-bold">Savings</td>
+                        <td>Gass Refill</td>
                         <td>Transportation</td>
                         <td>$6,004</td>
                         <td><span class="badge bg-danger">Pending</span></td>
+                      </tr> <tr></tr>
+                        <td>23-03-2024</td>
+                        <td class="text-secondary-emphasis fw-bold">Savings</td>
+                        <td>Gass and PetrolFuel</td>
+                        <td>Transportation</td>
+                        <td>$64,004</td>
+                        <td><span class="badge bg-success">Pending</span></td>
                       </tr>
                      
                     </tbody>
