"Updated radar chart labels and values in dashboard.html"

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -389,40 +389,37 @@
                     radar: {
                       // shape: 'circle',
                       indicator: [{
-                        name: 'Sales',
-                        max: 6500
+                        name: 'Investment',
+                        max: 65000
                       },
                       {
-                        name: 'Administration',
+                        name: 'Savings',
                         max: 16000
                       },
                       {
-                        name: 'Information Technology',
+                        name: 'Social',
                         max: 30000
                       },
                       {
-                        name: 'Customer Support',
-                        max: 38000
+                        name: 'Entertainment',
+                        max: 3800
                       },
                       {
-                        name: 'Development',
-                        max: 52000
+                        name: 'Health',
+                        max: 5200
                       },
-                      {
-                        name: 'Marketing',
-                        max: 25000
-                      }
+                      
                       ]
                     },
                     series: [{
                       name: 'Budget vs spending',
                       type: 'radar',
                       data: [{
-                        value: [4200, 3000, 20000, 35000, 50000, 18000],
+                        value: [4200, 3000, 20000, 35000, 50000],
                         name: 'Allocated Budget'
                       },
                       {
-                        value: [5000, 14000, 28000, 26000, 42000, 21000],
+                        value: [5000, 14000, 28000, 26000, 42000 ],
                         name: 'Actual Spending'
                       }
                       ]
