--- a/public/pages-register.html
+++ b/public/pages-register.html
@@ -32,6 +32,11 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
 
+<script type="module" src="assets/js/register.js"></script>
+<script type="module" src="assets/js/firebase.js"></script>
+
+
+
 <body>
 
   <main>
